--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "homepage": "https://github.com/abenojardev/open-ai",
     "license": "MIT",
-    "authors": [,
+    "authors": [
         {
             "name": "Ken Abenojar",
             "email": "abenojardev@gmail.com",
